# literature-triage

./: .env.example  .gitignore  AHMET_DEGISIKLIK_OZETI.md  CALISTIRMA.md  LICENSE  Makefile  README.md  REHBER.md  cluster.py  cluster_labels.py  dashboard.py  explain.py  ingest.py  models.py  pipeline.py  pyproject.toml  rank.py  report.py  requirements.txt  retrieve_arxiv.py  retrieve_online.py  summarize.py  triage.py  utils.py  vectorize.py
data/: arxiv_corpus.jsonl  online_corpus.jsonl
examples/: run_example.sh
examples/corpus/: doc04_christofides.md  doc05_graphic_tsp_4_3.md  doc06_subcubic_2ecss.md  doc07_ear_decomposition_survey.md  doc08_matching_polytope.md  doc09_held_karp_relaxation.md  doc1.md  doc10_lp_rounding_network_design.md  doc11_iterative_rounding.md  doc12_primal_dual_schemes.md  doc13_t_join_polyhedra.md  doc14_path_tsp.md  doc15_atsp_logn.md  doc16_randomized_rounding.md  doc17_thin_trees.md  doc18_steiner_tree.md  doc19_min_cost_flow.md  doc2.txt  doc20_jain_two_approx.md  doc21_steiner_forest.md  doc22_vrp_overview.md  doc23_max_cut_goemans_williamson.md  doc24_set_cover.md  doc25_local_search_facility.md  doc3.md  (+18 more)
retrievers/: __init__.py  arxiv_retriever.py  fetch_online.py  http_client.py  merge_corpora.py  openalex_retriever.py
storage/: __init__.py  jsonl_store.py  run_history.py
tests/: test_arxiv_retriever.py  test_cluster_labels.py  test_explain.py  test_fetch_online.py  test_ingest.py  test_jsonl_store.py  test_jsonl_triage_integration.py  test_merge_corpora.py  test_openalex_retriever.py  test_pipeline.py  test_run_history.py
(+2 files in other folders)
