[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assisted-literature-triage-tool"
version = "0.1.0"
description = "A local literature triage pipeline using TF-IDF ranking, KMeans clustering, and extractive summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib==1.4.2",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "PyMuPDF==1.24.10",
    "scikit-learn==1.5.2",
    "streamlit==1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
py-modules = [
    "cluster",
    "cluster_labels",
    "dashboard",
    "explain",
    "ingest",
    "models",
    "pipeline",
    "rank",
    "report",
    "retrieve_arxiv",
    "summarize",
    "triage",
    "utils",
    "vectorize",
]
packages = ["retrievers", "storage"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
